docs + consent validation revert